--- a/app/src/main/res/layout/trailer_row.xml
+++ b/app/src/main/res/layout/trailer_row.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:paddingTop="16dip"
+    android:paddingBottom="16dip">
+    <ImageView
+        android:id="@+id/trailerPlayIcon"
+        app:srcCompat="@drawable/ic_play_arrow_black_24px"
+        android:contentDescription="Play trailer"
+        android:padding="8dip"
+        android:layout_width="48dip"
+        android:layout_height="48dip" />
+    <ImageView
+        android:id="@+id/trailerShareIcon"
+        app:srcCompat="@drawable/ic_share_black_24px"
+        android:contentDescription="Share trailer"
+        android:padding="8dip"
+        android:layout_width="48dip"
+        android:layout_height="48dip" />
     <TextView
         android:id="@+id/trailerName"
         android:textStyle="bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/trailerKey"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:paddingLeft="8dip"
+        android:layout_weight="1"/>
 </LinearLayout>
