More cleanup, treat app home button like back button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#0D47A1</color>
-    <color name="colorAccent">#FFEB3B</color>
+    <color name="colorAccent">#9B26AF</color>
     <color name="color100">#BBDEFB</color>
 </resources>
